Eliminating build time warning